# project2

./: README.md  check.sh  gif.py  giphy_api.py  giphy_cli.py  pyproject.toml  searchtest.json  temp.py  test.py  trendingtest.json
